# CS311_FinalProject

./: .gdbinit  CMakeLists.txt  README.md  TodoApp.pro  db.csv
src/: main.cpp
src/BinSearchSortTree/: binstree.cpp  binstree.h
src/CSV/: csvManager.cpp  csvManager.h  rapidcsv.h
src/Elem/: elem.cpp  elem.h  generateId.cpp  generateId.h
src/GUI/: mainWindow.cpp  mainWindow.h
ui/: mainWindow.ui
